--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Rahina Corner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="stylerahina.css">
   </head>
 <body>
   <h1>Our Menu</h1>
