--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Rahina Corner</title>
+  <title>Tab responsible Corner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylerahina.css">
   </head>
